--- a/tareas/2/Ejercicios_2.Rnw
+++ b/tareas/2/Ejercicios_2.Rnw
@@ -12,7 +12,7 @@
 \begin{document}
 Resolución \\
 \\
-1. \\
+1.1. \\
 \begin{align*}
 & \text{Distribución beta(2,8):} \\
 & E(\pi \mid y) =\frac{\alpha+y}{\alpha+\beta+n} = \frac{2+18}{2+8+50} = 0,33 \\
@@ -39,7 +39,7 @@ cat(sprintf("Li = %6.3f Ls = %6.3f", qbeta(0.025, 20,40), qbeta(0.975, 20,40)))
 <<>>=
 cat(sprintf("Li = %6.3f Ls = %6.3f", qbeta(0.025, 34,96), qbeta(0.975, 34,96)))
 @
-2. \\
+1.2. \\
 <<fig=T,out.width="50%">>=
 ## Priori
 pr <- seq(0, 1, by=0.01)
@@ -71,9 +71,32 @@ lines(pr, f2, type="l", lwd=1.5, col="firebrick")
 legend(0.6, 4, c("a=20, b=40", "a=34, b=96"), col=c("navyblue", "firebrick"), lwd=1.5)
 @
 \\
-3. \\
+1.3. \\
 Los investigadores deberían rechazar la hipótesis nula, dado que, ambas distribuciones a posteriori presentan un valor esperado superior a 0,2 , a pesar de que el valor esperado de la a priori beta(2,8) fuese inferior en un primer momento. \\
 Podemos apreciar cómo $p_{observada}$ desplaza ambas curvas hacia valores superiores, mostrando a su vez que beta(16,64) era ciertamente más informativa que la anterior. \\
 \\
-4. \\
+1.4. \\
+\\
+2.1. \\
+<<>>=
+b <- c(-1.20, -0.65, 0.20, 0.80, 1.15 )
+muestras <- 1000
+theta <- rnorm(muestras)
+
+## Prob de éxito de cada item en cada muestra 
+p_mat <- matrix(nrow = 1000,ncol =  5)
+for (i in 1:length(b)) {
+	for (j in 1:muestras) {
+		p_mat[j,i] <- exp(theta[j] - b[i]) / (1 + exp(theta[j] - b[i]))
+	}
+}
+
+## Promedio de las probs de cada item
+Pr_v <- apply(p_mat, mean, MARGIN = 2)
+
+
+## Calculamos la intersección
+P_3prim = Pr_v[1] * Pr_v[2] * Pr_v[3] * (1-Pr_v[4]) * (1-Pr_v[5])
+print (P_3prim)
+@
 \end{document}
