--- a/tareas/2/Ejercicios_2.Rnw
+++ b/tareas/2/Ejercicios_2.Rnw
@@ -70,13 +70,78 @@ lines(pr, f2, type="l", lwd=1.5, col="firebrick")
 
 legend(0.6, 4, c("a=20, b=40", "a=34, b=96"), col=c("navyblue", "firebrick"), lwd=1.5)
 @
-\\
 1.3. \\
 Los investigadores deberían rechazar la hipótesis nula, dado que, ambas distribuciones a posteriori presentan un valor esperado superior a 0,2. \\
 Beta(16,64) es más informativa, por lo que las dispersiones son inferiores en la distribución a posteriori. \\
 \\
 1.4. \\
-\\
+<<>>=
+## beta (2,8)
+library(rstan)
+set.seed(1)
+
+y <- 18
+n <- 50
+
+alpha <- 2
+beta <- 8
+
+datos <- list(N=n, exitos=y, a=alpha, b=beta)
+
+codigo <- '
+data {
+int<lower=0> N;
+int exitos;
+real a;
+real b;
+}
+
+parameters {
+real<lower=0, upper=1> pi;
+}
+
+model {
+pi ~ beta(a,b);
+exitos ~ binomial(N, pi);
+}
+'
+
+fit <- stan(model_code = codigo, data = datos)
+print(fit)
+@
+<<>>=
+## beta(16,64)
+set.seed(1)
+
+y <- 18
+n <- 50
+
+alpha <- 16
+beta <- 64
+
+datos <- list(N=n, exitos=y, a=alpha, b=beta)
+
+codigo <- '
+data {
+int<lower=0> N;
+int exitos;
+real a;
+real b;
+}
+
+parameters {
+real<lower=0, upper=1> pi;
+}
+
+model {
+pi ~ beta(a,b);
+exitos ~ binomial(N, pi);
+}
+'
+
+fit <- stan(model_code = codigo, data = datos)
+print(fit)
+@
 2.1. \\
 <<>>=
 b <- c(-1.20, -0.65, 0.20, 0.80, 1.15 )
@@ -100,16 +165,97 @@ P_3prim = Pr_v[1] * Pr_v[2] * Pr_v[3] * (1-Pr_v[4]) * (1-Pr_v[5])
 print (P_3prim)
 @
 2.2.\\
-\\
+<<>>=
+library(rstan)
+
+
+set.seed(1)
+x <- c(1, 1, 1, 0, 0)
+b <- c(-1.20, -0.65, 0.20, 0.80, 1.15)
+datos <- list(n_items = length(x), x = x, b = b)
+
+codigo <- "
+data {
+  int  n_items;
+  int x [n_items];
+  real b[n_items];
+}
+
+parameters {
+  real theta;
+}
+
+model {
+  real p;
+  theta ~ normal(0, 1);
+  for (i in 1:n_items) {
+    p = exp(theta - b[i]) / (1 + exp(theta - b[i]));
+    x[i] ~ bernoulli(p);
+  }
+}
+"
+fit <- stan(model_code = codigo, data = datos, iter = 1000)
+print(fit)
+@
 2.3. \\
+<<>>=
+library(rstan)
+library(ggplot2)
+@
+<<fig=TRUE,out.width=50%>>=
+traceplot(fit, pars="theta")
+@
+
 Cadenas de Markov: Podemos observar una convergencia aceptable dada la estabilidad de los valores simulados. Los valores muestreados son representativos de la distribución a posteriori. \\
 \\
+<<fig=TRUE,out.width=50%>>=
+stan_hist(fit, pars="theta")
+@
+
 La distribución $f(\theta \mid y)$, con media aproximada de 0,31. \\
+<<fig=TRUE,out.width=50%>>=
+stan_dens(fit, pars="theta")
+@
+
+La distribución (suavizada) $f(\theta \mid y)$, con media aproximada de 0,31. \\
 \\
+<<fig=TRUE,out.width=50%>>=
+plot(fit)
+@
+
 Con un $95 \%$ de confianza, el verdadero valor de $\theta$ se encuentra entre -1,07 y 1,71.\\
 \\
+<<fig=TRUE,out.width=50%>>=
+stan_ac(fit, pars="theta")
+@
+
 La autocorrelación disminuye al auumentar la distancia entre valores, es decir, las observaciones de la serie están correlacionadas positivamente con las observaciones anteriores. \\
 \\
 3. \\
+<<>>=
+library(rstan)
+set.seed(1)
+x <- rnorm(25,3,2)
+datos <- list(N = length(x), x = x)
+codigo <- "
+data {
+  int<lower=0> N;  
+  real x[N];
+}
+
+parameters {
+  real mu;
+}
+
+model {
+  mu ~ normal(0,10);
+  x ~ normal(mu,2);
+}
+"
+fit <- stan(model_code = codigo, data = datos, iter = 1000)
+print(fit)
+cat(sprintf("EAP = %6.3f, Var_post = %6.3f, Li_post = %6.3f,  Ls_post = %6.3f",
+						3.31, 0.41^2,qnorm(0.04, 3.31,0.41), qnorm(0.96, 3.31,0.41)))
+@
 Con un 96\% de confianza, el parámetro poblacional $\mu$, tras observar los datos muestreados, se encontrará entre los valores 2.592 y 4.028.
 \end{document}
