--- a/tareas/3/Ejercicios_3.Rnw
+++ b/tareas/3/Ejercicios_3.Rnw
@@ -31,7 +31,7 @@ summary(model_poiss)
 1.3.\\
 
 1.4. \\
-Dado que el primer modelo es frecuentista y parte de diferentes supuestos y trata con la estimación puntual de los coeficientes, no considero que sus resultados sean comparables a los 2 modelos bayesianos siguientes, que tratan con distribuciones a posteriori. \\
+Hemos de tener en cuenta que el primer modelo es frecuentista y parte de diferentes supuestos y trata con la estimación puntual de los coeficientes, no considero que sus resultados sean comparables a los 2 modelos bayesianos siguientes, que tratan con distribuciones a posteriori. \\
 Entre estos últimos, calculamos $AIC = 2 k -2 logverosimilitud$ : \\
 <<>>=
 AIC_2 <- 2*2 - 2*5.56
@@ -40,9 +40,13 @@ AIC_2
 AIC_3
 @
 
-Por lo tanto, determinamos que el modelo 3 presenta mejor ajuste teniendo en cuenta las penalizaciones de complejidad de dichos modelos.
+Por lo tanto, determinamos que el modelo 3 presenta mejor ajuste teniendo en cuenta las penalizaciones de complejidad de dichos modelos.\\
+Este a su vez nos indica que por cada hora de formación previa recibida, se cometen 0.2 errores menos, frente a los 0.07 del anterior.
 \\
-2.1.
+2.1. \\
+2.2. \\
+2.3.\\
+2.4.\\
 
 
 \end{document}
